# AIT-526-QA

./:  qa-samples.txt  .gitignore  README.md  pyproject.toml  qa-system.py
