[tool.poetry]
name = "group project assignment 2"
version = "0.1.0"
description = "For NLP group project"
authors = ["Cheng-Hsun, Hsu <a10121555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nltk = "^3.9.1"
spacy = "^3.8.4"
requests = "^2.32.3"
numpy = "^2.2.4"
wikipedia = "^1.4.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
